# rdkit-doc-stubs

./: .gitignore  README.md  pyproject.toml
build_stubs/: __main__.py
build_stubs/src/: __init__.py  align.py  classes.py  combine.py  find.py  get_data.py  infer.py  modules.py  monkey_ast.py  parse.py  unparse.py  utils.py
dev/: __main__.py
dev/src/: __init__.py  infer_types.py  names_align.py  parse.py  unparse.py  utils.py
src/rdkit-stubs/: RDConfig.pyi  RDLogger.pyi  RDPaths.pyi  RDRandom.pyi  TestRunner.pyi  __init__.pyi  rdBase.pyi  six.pyi
src/rdkit-stubs/Avalon/: __init__.pyi  pyAvalonTools.pyi
src/rdkit-stubs/Chem/: AllChem.pyi  BRICS.pyi  BuildFragmentCatalog.pyi  ChemicalFeatures.pyi  ChemicalForceFields.pyi  Crippen.pyi  DSViewer.pyi  Descriptors.pyi  Descriptors3D.pyi  EnumerateHeterocycles.pyi  EnumerateStereoisomers.pyi  FastSDMolSupplier.pyi  FeatFinderCLI.pyi  FilterCatalog.pyi  FragmentCatalog.pyi  FragmentMatcher.pyi  Fragments.pyi  FunctionalGroups.pyi  GraphDescriptors.pyi  Graphs.pyi  Lipinski.pyi  MACCSkeys.pyi  MCS.pyi  MolCatalog.pyi  MolSurf.pyi  PandasTools.pyi  PeriodicTable.pyi  PropertyMol.pyi  PyMol.pyi  QED.pyi  Randomize.pyi  Recap.pyi  ReducedGraphs.pyi  RegistrationHash.pyi  SATIS.pyi  SaltRemover.pyi  ShowMols.pyi  TemplateAlign.pyi  TorsionFingerprints.pyi  __init__.pyi  (+40 more)
src/rdkit-stubs/DataManip/: __init__.pyi
src/rdkit-stubs/DataStructs/: BitEnsemble.pyi  BitEnsembleDb.pyi  BitUtils.pyi  LazySignature.pyi  TopNContainer.pyi  VectCollection.pyi  __init__.pyi  cDataStructs.pyi
src/rdkit-stubs/Dbase/: DbConnection.pyi  (+7 more)
(+224 files in other folders)
